Fixed problem where background-blend-mode on mobile safari was not rendering background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,12 +224,13 @@ main section p {
     flex: 1 0 calc(95% - 20px);
     background-color: var(--highlight-50);
     background-blend-mode: soft-light;
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
     min-height: 200px;
     border: 5px solid var(--primary);
     margin: 10px;
     text-decoration: none;
-    background-size: 100%;
-    background-position: center;
     transition: all 0.2s ease-in-out,
                 background-color 0.4s ease-in;
 }
